--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -51,7 +51,7 @@ View templates applied to model documents or swap between templates or template 
 
 5. On your document's detail page, locate [document template]{.smallcaps}.
 
-6. View the currently applied template and version, or swap to another template or version.
+6. View the currently applied template and version, or swap to another template or version:
 
 ::: {.panel-tabset}
 
@@ -99,6 +99,8 @@ Delete templates no longer required by your organization:
 
 4. Select the template you would like to delete by clicking on it.
 
+   Review the details of the template to confirm the template is no longer required.[^10]
+
 5. Click **Delete Template** to remove that template.
 
    Once you confirm, the template will be deleted.
@@ -128,3 +130,12 @@ Delete templates no longer required by your organization:
 [^8]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
 [^9]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+
+[^10]:
+
+   [View document templates](#view-document-templates)<br></br>
+
+    **To delete a template without reviewing template details:**<br></br>
+
+    a. Hover over the template until the **{{< fa ellipsis-vertical >}}** appears, then click on it.
+    b. Select [**{{< fa trash-can >}} Delete**]{.red}.
