--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -51,7 +51,7 @@ View templates applied to model documents or swap between templates or template 
 
 5. On your document's detail page, locate [document template]{.smallcaps}.
 
-6. View the currently applied template and version, or swap to another template or version.
+6. View the currently applied template and version, or swap to another template or version:
 
 ::: {.panel-tabset}
 
@@ -76,6 +76,34 @@ d. Click **Apply Changes to Template** to complete the swap.
 
 :::
 
+### Delete document templates
+
+::: {.callout-important title="Template deletion is permanent and cannot be undone."}
+
+- Deleting a template deletes all versions of that template.[^5]
+- Templates can only be deleted if they are not in use by any documents.
+:::
+
+Delete templates no longer required by your organization:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Documents, select **Templates**.
+
+3. Select one of the tabs for the document type with the templates you want to view:
+
+   - **Documentation**[^6]
+   - **Validation Report**[^7]
+   - **Ongoing Monitoring**[^8]
+   - **Custom**[^9]
+
+4. Select the template you would like to delete by clicking on it.
+
+   Review the details of the template to confirm the template is no longer required.[^10]
+
+5. Click **Delete Template** to remove that template.
+
+   Once you confirm, the template will be deleted.
 
 
 <!-- FOOTNOTES -->
@@ -92,3 +120,22 @@ d. Click **Apply Changes to Template** to complete the swap.
    - **[type]{.smallcaps}** — Sort by document type alphabetically.
    - **[date created]{.smallcaps}** — Sort by creation date.
    - **[date updated]{.smallcaps}** — Sort by last update date.
+
+[^5]: [Customize document templates](customize-document-templates.qmd#edit-template-outlines)
+
+[^6]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
+[^7]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+
+[^8]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^9]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+
+[^10]:
+
+   [View document templates](#view-document-templates)<br></br>
+
+    **To delete a template without reviewing template details:**<br></br>
+
+    a. Hover over the template until the **{{< fa ellipsis-vertical >}}** appears, then click on it.
+    b. Select [**{{< fa trash-can >}} Delete**]{.red}.
