Edit: VDV Findings > Observations

--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -79,9 +79,9 @@ By default, {{< var vm.product >}} supports the following regulations:
 
 The {{< var validmind.checker >}} analyzes your documentation, identifies gaps, and generates recommendations for specific questions that you review in the next step.
 
-### Review the findings
+### Review the observations
 
-1. After the {{< var vm.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the findings:
+1. After the {{< var vm.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the observations:
 
 ::: {.pl4}
 [Gap Identified]{.bubble .red-b .red-bg} — A question that is not addressed and requires attention.<br>
@@ -91,14 +91,14 @@ The {{< var validmind.checker >}} analyzes your documentation, identifies gaps, 
 
 2. Review questions that require attention. Each question includes:
 
-     - **Finding** — An analysis of how the documentation currently addresses the question
+     - **Observation** — An analysis of how the documentation currently addresses the question
      - **Recommendation** — If suggested, guidance on how to revise the documentation to better address the question
 
-   ![Sample question that is not addressed](/guide/model-documentation/vdv-gap-identified.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
+   ![Sample question that is not addressed](/guide/model-documentation/vdv-gap-identified.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the observation 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
 
-   ![Sample question that is partially addressed](/guide/model-documentation/vdv-partial-gap.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
+   ![Sample question that is partially addressed](/guide/model-documentation/vdv-partial-gap.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the observation 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
 
-   ![Sample question that is fully addressed](/guide/model-documentation/vdv-no-significant-gaps.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'No significant gaps.' with a recommendation to add a policy paragraph." .screenshot}
+   ![Sample question that is fully addressed](/guide/model-documentation/vdv-no-significant-gaps.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the observation 'No significant gaps.' with a recommendation to add a policy paragraph." .screenshot}
 
 Use the feedback provided by the {{< var validmind.checker >}} to review the appropriate sections of your documentation and decide what revisions should be made. Or, if you have run the {{< var vm.checker >}} before and were just checking that all documentation issues have been addressed, submit your model for validation.
 
