Edit: Manage model inventory fields

--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -17,27 +17,19 @@ aliases:
 
 :::
 
-## Add or edit inventory fields
-<span id="add-edit"></span>
+## View, search, and filter inventory fields
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Under Models, select **Model Inventory Fields**.
 
-    Here you can edit existing inventory fields, or add a new one:
+    Displayed in groups as lists are the fields available to your organization with a quick view of:
 
-{{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
-
-#### Inventory field types
-<span id="field-types"></span>
-
-{{< include /guide/model-inventory/_inventory-field-types.qmd >}}
-
-## Search and filter existing inventory fields
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Models, select **Model Inventory Fields**.
+    - Number of workflows that field is used in[^2]
+    - The field key
+    - The field type[^3]
+    - Field description
+    - Whether or not the field is required when creating models
 
 3. Narrow down existing inventory fields available to your models by searching or filtering for results:
 
@@ -59,22 +51,38 @@ b. Select whether to search in the **Title** or **Description**.
 
 c. Click **Search** to narrow down your results by your entered keywords.
 
-    Expand any inventory field group to see more fields.[^2]
+    Expand any inventory field group to see more fields.
 
 #### Filter fields
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
     - **[required when creating models]{.smallcaps}** — Whether or not the field was set up as required on model registration.
-    - **[types]{.smallcaps}** — What type of field it is.[^3]
+    - **[types]{.smallcaps}** — What type of field it is.
     - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^4]
     - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^5]
 
 b. Click **Apply Filters** to narrow down your results by your configured criteria.
 
-    Expand any inventory field group to see more fields.[^6]
+    Expand any inventory field group to see more fields.
 
 :::
+
+## Add or edit inventory fields
+<span id="add-edit"></span>
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Models, select **Model Inventory Fields**.
+
+    Here you can edit existing inventory fields, or add a new one:
+
+{{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
+
+#### Inventory field types
+<span id="field-types"></span>
+
+{{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
 ## Add inventory field groups
 <span id="field-groups">
@@ -104,12 +112,10 @@ To group model inventory fields, first create an inventory field group:
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^2]: [Add inventory field groups](#add-inventory-field-groups)
+[^2]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
 [^3]: [Inventory field types](#field-types)
 
 [^4]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
 [^5]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
-
-[^6]: [Add inventory field groups](#add-inventory-field-groups)
