--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -23,7 +23,7 @@ aliases:
 
 2. Under Models, select **Model Inventory Fields**.
 
-    Displayed in groups as lists are the fields available to your organization with a quick view of:
+    Displayed in groups as lists are the inventory fields available to models in your organization with a quick view of:
 
     - Number of workflows that field is used in[^2]
     - The field key
