--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -14,6 +14,54 @@ Manage the fields that appear on all finding types logged on your models. Choose
 
 :::
 
+## View, search, and filter findings fields
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Fields**.
+
+    Displayed in groups as lists are the findings fields available to findings in your organization with a quick view of:
+
+    - Number of workflows that field is used in[^2]*
+    - The field key
+    - The field type[^3]
+    - Field description
+    - Whether or not the field is required when creating findings
+
+3. Narrow down existing findings fields available to your findings by searching or filtering for results:
+
+::: {.column-margin}
+
+::: {.callout title="Note that searching and filtering of fields stack."}
+For example, if you first search by keyword for `Regression` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
+:::
+
+:::
+
+::: {.panel-tabset}
+
+#### Search fields
+
+a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within a findings field.
+
+b. Select whether to search in the **Title** or **Description**.
+
+c. Click **Search** to narrow down your results by your entered keywords.
+
+    Expand any inventory field group to see more fields.[^7]
+
+#### Filter fields
+
+a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
+
+    - **[types]{.smallcaps}** — What type of field it is.[^8]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^9]
+
+b. Click **Apply Filters** to narrow down your results by your configured criteria.
+
+    Expand any inventory field group to see more fields.[^10]
+:::
+
 ## Add or edit finding fields
 <span id="add-edit"></span>
 
@@ -113,46 +161,6 @@ User
 - Select list pre-populated with users from your {{< fa book-open >}} User Directory.^[[Manage users](/guide/configuration/manage-users.qmd)]
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
-## Search and filter existing findings fields
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Findings, select **Finding Fields**.
-
-3. Narrow down existing findings fields available to your findings by searching or filtering for results:
-
-::: {.column-margin}
-
-::: {.callout title="Note that searching and filtering of fields stack."}
-For example, if you first search by keyword for `Regression` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
-:::
-
-:::
-
-::: {.panel-tabset}
-
-#### Search fields
-
-a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within a findings field.
-
-b. Select whether to search in the **Title** or **Description**.
-
-c. Click **Search** to narrow down your results by your entered keywords.
-
-    Expand any inventory field group to see more fields.[^7]
-
-#### Filter fields
-
-a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
-
-    - **[types]{.smallcaps}** — What type of field it is.[^8]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^9]
-
-b. Click **Apply Filters** to narrow down your results by your configured criteria.
-
-    Expand any inventory field group to see more fields.[^10]
-:::
-
 ## Add finding field groups
 <span id="field-groups">
 
@@ -181,6 +189,10 @@ To group finding fields, first create a finding field group:
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
+<!-- HERE -->
+
+<!-- 
+
 [^2]: [Finding field types](#field-types)
 
 [^3]: [Manage finding types](manage-finding-types.qmd)
@@ -208,4 +220,6 @@ To group finding fields, first create a finding field group:
 
 [^9]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^10]: [Add finding field groups](#add-finding-field-groups)
+[^10]: [Add finding field groups](#add-finding-field-groups) 
+
+-->
