Edit: Manage model finding fields

--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -23,13 +23,14 @@ aliases:
 
 2. Under Models, select **Model Inventory Fields**.
 
-    Displayed in groups as lists are the inventory fields available to models in your organization with a quick view of:
+    Displayed in groups[^2] as lists are the inventory fields available to models in your organization with a quick view of:
 
-    - Number of workflows that field is used in[^2]
+    - Number of workflows that field is used in[^3]
     - The field key
-    - The field type[^3]
+    - The field type[^4]
     - Field description
     - Whether or not the field is required when creating models
+    - Quick actions you can take on the inventory field
 
 3. Narrow down existing inventory fields available to your models by searching or filtering for results:
 
@@ -59,8 +60,8 @@ a. Click **{{< fa filter >}} Filter** to filter fields by any of the following c
 
     - **[required when creating models]{.smallcaps}** — Whether or not the field was set up as required on model registration.
     - **[types]{.smallcaps}** — What type of field it is.
-    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^4]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^5]
+    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^5]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^6]
 
 b. Click **Apply Filters** to narrow down your results by your configured criteria.
 
@@ -112,10 +113,12 @@ To group model inventory fields, first create an inventory field group:
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^2]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^2]: [Add inventory field groups](#add-inventory-field-groups)
 
-[^3]: [Inventory field types](#field-types)
+[^3]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
-[^4]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+[^4]: [Inventory field types](#field-types)
 
-[^5]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^5]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+
+[^6]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
