--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -20,13 +20,14 @@ Manage the fields that appear on all finding types logged on your models. Choose
 
 2. Under Findings, select **Finding Fields**.
 
-    Displayed in groups as lists are the findings fields available to findings in your organization with a quick view of:
+    Displayed in groups[^2] as lists are the findings fields available to findings in your organization with a quick view of:
 
-    - Number of workflows that field is used in[^2]*
+    - Number of workflows that field is used in[^3]
     - The field key
-    - The field type[^3]
+    - The field type[^4]
     - Field description
     - Whether or not the field is required when creating findings
+    - Quick actions you can take on the finding field
 
 3. Narrow down existing findings fields available to your findings by searching or filtering for results:
 
@@ -48,18 +49,20 @@ b. Select whether to search in the **Title** or **Description**.
 
 c. Click **Search** to narrow down your results by your entered keywords.
 
-    Expand any inventory field group to see more fields.[^7]
+    Expand any inventory field group to see more fields.
 
 #### Filter fields
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
-    - **[types]{.smallcaps}** — What type of field it is.[^8]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^9]
+    - **[required when creating findings]{.smallcaps}** — Whether or not the field was set up as required on finding creation.
+    - **[types]{.smallcaps}** — What type of field it is.
+    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^5]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^6]
 
 b. Click **Apply Filters** to narrow down your results by your configured criteria.
 
-    Expand any inventory field group to see more fields.[^10]
+    Expand any inventory field group to see more fields.
 :::
 
 ## Add or edit finding fields
@@ -77,11 +80,11 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 
 To add a new finding field, click **{{< fa plus >}} Add Field**:
 
-a. Finding fields require a [type]{.smallcaps},[^2] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^3]
+a. Finding fields require a [type]{.smallcaps},[^7] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^8]
 
     - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.[^4]
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^5]
+    - (Optional) You can also assign a field to a group.[^9]
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^10]
 
 a. When you are satisfied with the setup of your finding field, click **Save**.
 
@@ -91,7 +94,7 @@ To edit an existing finding field:
 
 a. Hover over the finding field you would like to edit.
 
-    Expand any inventory field group to see more fields.[^6]
+    Expand any inventory field group to see more fields.[^11]
 
 a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
 
@@ -106,7 +109,7 @@ Single Line Text
 : Simple text value.
 
 Attachments
-: Upload supporting files for your model.^[[Manage supporting documentation](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] Files must be less than 50 MB each in size.
+: Upload supporting files for your model.[^12] Files must be less than 50 MB each in size.
 
 Long Text
 : Toggle **Enable rich text formatting** to create a template using the rich text editor.
@@ -146,19 +149,19 @@ URL
 Date
 : - Date value in `yyyy-mm-dd` format. 
 - Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
-- Set the [date format]{.smallcaps} for date fields under your profile.^[[Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)]
+- Set the [date format]{.smallcaps} for date fields under your profile.[^13]
 
 Date Time
 : - Date value in `yyyy-mm-dd, 24hr` format.
 - Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
-- Set the [date format]{.smallcaps} for date time fields under your profile.^[[Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)]
+- Set the [date format]{.smallcaps} for date time fields under your profile.[^14]
 
 Email
 : Text value in valid email (`user@domain.com`) format.
 
 User
 : 
-- Select list pre-populated with users from your {{< fa book-open >}} User Directory.^[[Manage users](/guide/configuration/manage-users.qmd)]
+- Select list pre-populated with users from your {{< fa book-open >}} User Directory.[^15]
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
 ## Add finding field groups
@@ -189,17 +192,23 @@ To group finding fields, first create a finding field group:
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-<!-- HERE -->
+[^2]: [Add finding field groups](#add-finding-field-groups)
 
-<!-- 
+[^3]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
-[^2]: [Finding field types](#field-types)
+[^4]: [Finding field types](#field-types)
 
-[^3]: [Manage finding types](manage-finding-types.qmd)
+[^5]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
-[^4]: [Add groups](#field-groups)
+[^6]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^5]:
+[^7]: [Finding field types](#field-types)
+
+[^8]: [Manage finding types](manage-finding-types.qmd)
+
+[^9]: [Add finding field groups](#field-groups)
+
+[^10]:
 
     ::: {.callout title="Leave this field blank to leave permissions as default."}
     - By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role has write access.
@@ -212,14 +221,12 @@ To group finding fields, first create a finding field group:
 
     :::
 
-[^6]: [Add finding field groups](#add-finding-field-groups)
+[^11]: [Add finding field groups](#add-finding-field-groups)
 
-[^7]: [Add finding field groups](#add-finding-field-groups)
+[^12]: [Manage supporting documentation](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)
 
-[^8]: [Finding field types](#field-types)
+[^13]: [Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)
 
-[^9]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^14]: [Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)
 
-[^10]: [Add finding field groups](#add-finding-field-groups) 
-
--->
+[^15]: [Manage users](/guide/configuration/manage-users.qmd)
