--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -165,7 +165,6 @@ User
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
 ## Add finding field groups
-<span id="field-groups">
 
 To group finding fields, first create a finding field group:
 
@@ -173,7 +172,11 @@ To group finding fields, first create a finding field group:
 
 2. Under Findings, select **Finding Fields**.
 
-{{< include /guide/model-inventory/_add-field-groups.qmd >}}
+3. Click **{{< fa plus >}} Add Group** and enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}** for the group.
+
+4. Click **Create Group** to add the new group.
+
+5. Assign the desired fields to the group.[^16]
 
 ## Delete finding fields
 
@@ -206,7 +209,7 @@ To group finding fields, first create a finding field group:
 
 [^8]: [Manage finding types](manage-finding-types.qmd)
 
-[^9]: [Add finding field groups](#field-groups)
+[^9]: [Add finding field groups](#add-finding-field-groups)
 
 [^10]:
 
@@ -230,3 +233,5 @@ To group finding fields, first create a finding field group:
 [^14]: [Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)
 
 [^15]: [Manage users](/guide/configuration/manage-users.qmd)
+
+[^16]: [Add or edit finding fields](#add-or-edit-finding-fields)
