--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -86,7 +86,6 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 {{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
 ## Add inventory field groups
-<span id="field-groups">
 
 To group model inventory fields, first create an inventory field group:
 
@@ -94,7 +93,11 @@ To group model inventory fields, first create an inventory field group:
 
 2. Under Models, select **Model Inventory Fields**.
 
-{{< include /guide/model-inventory/_add-field-groups.qmd >}}
+3 Click **{{< fa plus >}} Add Group** and enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}** for the group.
+
+4. Click **Create Group** to add the new group.
+
+5. Assign the desired fields to the group.[^7]
 
 ## Delete inventory fields
 
@@ -122,3 +125,5 @@ To group model inventory fields, first create an inventory field group:
 [^5]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
 [^6]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^7]: [Add or edit inventory fields](#add-or-edit-inventory-fields)
