--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -6,10 +6,10 @@
 
 To add a new inventory field, click **{{< fa plus >}} Add Field**:
 
-a. Inventory fields require a [type]{.smallcaps},^[[Inventory field types](#field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
+a. Inventory fields require a [type]{.smallcaps},^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
     - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.^[[Add inventory field groups](#field-groups)]
+    - (Optional) You can also assign a field to a group.^[[Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
 
 a. When you are satisfied with the setup of your inventory field, click **Save**.
