--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -55,7 +55,7 @@ c. Click **Search** to narrow down your results by your entered keywords.
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
-    - **[required when creating findings]{.smallcaps}** — Whether or not the field was set up as required on finding creation.
+    - **[required on creation]{.smallcaps}** — Whether or not the field was set up as required on finding creation.
     - **[types]{.smallcaps}** — What type of field it is.
     - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^5]
     - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^6]
@@ -103,7 +103,6 @@ a. Make your desired changes to your finding field, then click **Save**.
 :::
 
 #### Finding field types
-<span id="field-types"></span>
 
 Single Line Text
 : Simple text value.
@@ -199,13 +198,13 @@ To group finding fields, first create a finding field group:
 
 [^3]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
-[^4]: [Finding field types](#field-types)
+[^4]: [Finding field types](#finding-field-types)
 
 [^5]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
 [^6]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^7]: [Finding field types](#field-types)
+[^7]: [Finding field types](#finding-field-types)
 
 [^8]: [Manage finding types](manage-finding-types.qmd)
 
