--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -58,7 +58,7 @@ c. Click **Search** to narrow down your results by your entered keywords.
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
-    - **[required when creating models]{.smallcaps}** — Whether or not the field was set up as required on model registration.
+    - **[required on creation]{.smallcaps}** — Whether or not the field was set up as required on model registration.
     - **[types]{.smallcaps}** — What type of field it is.
     - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^5]
     - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^6]
@@ -81,7 +81,6 @@ b. Click **Apply Filters** to narrow down your results by your configured criter
 {{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
 
 #### Inventory field types
-<span id="field-types"></span>
 
 {{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
@@ -93,7 +92,7 @@ To group model inventory fields, first create an inventory field group:
 
 2. Under Models, select **Model Inventory Fields**.
 
-3 Click **{{< fa plus >}} Add Group** and enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}** for the group.
+3. Click **{{< fa plus >}} Add Group** and enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}** for the group.
 
 4. Click **Create Group** to add the new group.
 
@@ -120,7 +119,7 @@ To group model inventory fields, first create an inventory field group:
 
 [^3]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
-[^4]: [Inventory field types](#field-types)
+[^4]: [Inventory field types](#inventory-field-types)
 
 [^5]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
