--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -47,6 +47,7 @@ c. Click **Search** to narrow down your results by your entered keywords.
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
+    - **[finding types]{.smallcaps}** — The types of findings that use this field.
     - **[required on creation]{.smallcaps}** — Whether or not the field was set up as required on finding creation.
     - **[types]{.smallcaps}** — What type of field it is.
     - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^6]
