docs: Update inventory & finding field views (#964)
* Edit: Manage model inventory fields

* Save point

* Edit: Manage model finding fields

* Cleanup

* Proofread

* Adjustments

* Final touch

--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -17,6 +17,54 @@ aliases:
 
 :::
 
+## View, search, and filter inventory fields
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Models, select **Model Inventory Fields**.
+
+    Displayed in groups[^2] as lists are the inventory fields available to models in your organization with a quick view of:[^3]
+
+    - Number of workflows that field is used in[^4]
+    - The field key
+    - The field type[^5]
+    - Field description
+    - Whether or not the field is required when creating models
+    - Quick actions you can take on the inventory field
+
+3. Narrow down existing inventory fields available to your models by searching or filtering for results:
+
+::: {.panel-tabset}
+
+#### Search fields
+
+a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within an inventory field.
+
+b. Select whether to search in the **Title** or **Description**.
+
+c. Click **Search** to narrow down your results by your entered keywords.
+
+    Expand any inventory field group to see more fields.
+
+#### Filter fields
+
+a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
+
+    - **[required on creation]{.smallcaps}** — Whether or not the field was set up as required on model registration.
+    - **[types]{.smallcaps}** — What type of field it is.
+    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^6]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^7]
+
+b. Click **Apply Filters** to narrow down your results by your configured criteria.
+
+    Expand any inventory field group to see more fields.
+
+:::
+
+::: {.callout title="Note that searching and filtering of fields stack."}
+For example, if you first search by keyword for `date` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
+:::
+
 ## Add or edit inventory fields
 <span id="add-edit"></span>
 
@@ -29,55 +77,10 @@ aliases:
 {{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
 
 #### Inventory field types
-<span id="field-types"></span>
 
 {{< include /guide/model-inventory/_inventory-field-types.qmd >}}
 
-## Search and filter existing inventory fields
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Models, select **Model Inventory Fields**.
-
-3. Narrow down existing inventory fields available to your models by searching or filtering for results:
-
-::: {.column-margin}
-
-::: {.callout title="Note that searching and filtering of fields stack."}
-For example, if you first search by keyword for `date` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
-:::
-
-:::
-
-::: {.panel-tabset}
-
-#### Search fields
-
-a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within an inventory field.
-
-b. Select whether to search in the **Title** or **Description**.
-
-c. Click **Search** to narrow down your results by your entered keywords.
-
-    Expand any inventory field group to see more fields.[^2]
-
-#### Filter fields
-
-a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
-
-    - **[required when creating models]{.smallcaps}** — Whether or not the field was set up as required on model registration.
-    - **[types]{.smallcaps}** — What type of field it is.[^3]
-    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^4]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^5]
-
-b. Click **Apply Filters** to narrow down your results by your configured criteria.
-
-    Expand any inventory field group to see more fields.[^6]
-
-:::
-
 ## Add inventory field groups
-<span id="field-groups">
 
 To group model inventory fields, first create an inventory field group:
 
@@ -85,7 +88,11 @@ To group model inventory fields, first create an inventory field group:
 
 2. Under Models, select **Model Inventory Fields**.
 
-{{< include /guide/model-inventory/_add-field-groups.qmd >}}
+3. Click **{{< fa plus >}} Add Group** and enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}** for the group.
+
+4. Click **Create Group** to add the new group.
+
+5. Assign the desired fields to the group.[^8]
 
 ## Delete inventory fields
 
@@ -106,10 +113,18 @@ To group model inventory fields, first create an inventory field group:
 
 [^2]: [Add inventory field groups](#add-inventory-field-groups)
 
-[^3]: [Inventory field types](#field-types)
+[^3]:
 
-[^4]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+    ::: {.callout title="Missing column headers?"}
+    Click, hold, and drag to the right to reveal additional columns.
+    :::
 
-[^5]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^4]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
-[^6]: [Add inventory field groups](#add-inventory-field-groups)
+[^5]: [Inventory field types](#inventory-field-types)
+
+[^6]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+
+[^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^8]: [Add or edit inventory fields](#add-or-edit-inventory-fields)
