--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -14,6 +14,54 @@ Manage the fields that appear on all finding types logged on your models. Choose
 
 :::
 
+## View, search, and filter findings fields
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Fields**.
+
+    Displayed in groups[^2] as lists are the findings fields available to findings in your organization with a quick view of:[^3]
+
+    - Number of workflows that field is used in[^4]
+    - The field key
+    - The field type[^5]
+    - Field description
+    - Whether or not the field is required when creating findings
+    - Quick actions you can take on the finding field
+
+3. Narrow down existing findings fields available to your findings by searching or filtering for results:
+
+::: {.panel-tabset}
+
+#### Search fields
+
+a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within a findings field.
+
+b. Select whether to search in the **Title** or **Description**.
+
+c. Click **Search** to narrow down your results by your entered keywords.
+
+    Expand any inventory field group to see more fields.
+
+#### Filter fields
+
+a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
+
+    - **[finding types]{.smallcaps}** — The types of findings that use this field.
+    - **[required on creation]{.smallcaps}** — Whether or not the field was set up as required on finding creation.
+    - **[types]{.smallcaps}** — What type of field it is.
+    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^6]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^7]
+
+b. Click **Apply Filters** to narrow down your results by your configured criteria.
+
+    Expand any inventory field group to see more fields.
+:::
+
+::: {.callout title="Note that searching and filtering of fields stack."}
+For example, if you first search by keyword for `Regression` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
+:::
+
 ## Add or edit finding fields
 <span id="add-edit"></span>
 
@@ -29,11 +77,11 @@ Manage the fields that appear on all finding types logged on your models. Choose
 
 To add a new finding field, click **{{< fa plus >}} Add Field**:
 
-a. Finding fields require a [type]{.smallcaps},[^2] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^3]
+a. Finding fields require a [type]{.smallcaps},[^8] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^9]
 
     - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
-    - (Optional) You can also assign a field to a group.[^4]
-    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^5]
+    - (Optional) You can also assign a field to a group.[^10]
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^11]
 
 a. When you are satisfied with the setup of your finding field, click **Save**.
 
@@ -43,7 +91,7 @@ To edit an existing finding field:
 
 a. Hover over the finding field you would like to edit.
 
-    Expand any inventory field group to see more fields.[^6]
+    Expand any inventory field group to see more fields.[^12]
 
 a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
 
@@ -52,13 +100,12 @@ a. Make your desired changes to your finding field, then click **Save**.
 :::
 
 #### Finding field types
-<span id="field-types"></span>
 
 Single Line Text
 : Simple text value.
 
 Attachments
-: Upload supporting files for your model.^[[Manage supporting documentation](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)] Files must be less than 50 MB each in size.
+: Upload supporting files for your model.[^13] Files must be less than 50 MB each in size.
 
 Long Text
 : Toggle **Enable rich text formatting** to create a template using the rich text editor.
@@ -98,63 +145,22 @@ URL
 Date
 : - Date value in `yyyy-mm-dd` format. 
 - Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
-- Set the [date format]{.smallcaps} for date fields under your profile.^[[Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)]
+- Set the [date format]{.smallcaps} for date fields under your profile.[^14]
 
 Date Time
 : - Date value in `yyyy-mm-dd, 24hr` format.
 - Selection is in the current user's timezone; other users viewing this field will see the value automatically in their timezone. 
-- Set the [date format]{.smallcaps} for date time fields under your profile.^[[Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)]
+- Set the [date format]{.smallcaps} for date time fields under your profile.[^15]
 
 Email
 : Text value in valid email (`user@domain.com`) format.
 
 User
 : 
-- Select list pre-populated with users from your {{< fa book-open >}} User Directory.^[[Manage users](/guide/configuration/manage-users.qmd)]
+- Select list pre-populated with users from your {{< fa book-open >}} User Directory.[^16]
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
-## Search and filter existing findings fields
-
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Findings, select **Finding Fields**.
-
-3. Narrow down existing findings fields available to your findings by searching or filtering for results:
-
-::: {.column-margin}
-
-::: {.callout title="Note that searching and filtering of fields stack."}
-For example, if you first search by keyword for `Regression` under **Title** without clearing that search, any additional filters applied will only apply to the results returned by that initial search.
-:::
-
-:::
-
-::: {.panel-tabset}
-
-#### Search fields
-
-a. Click **{{< fa magnifying-glass >}} Search** to search by keywords within a findings field.
-
-b. Select whether to search in the **Title** or **Description**.
-
-c. Click **Search** to narrow down your results by your entered keywords.
-
-    Expand any inventory field group to see more fields.[^7]
-
-#### Filter fields
-
-a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
-
-    - **[types]{.smallcaps}** — What type of field it is.[^8]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^9]
-
-b. Click **Apply Filters** to narrow down your results by your configured criteria.
-
-    Expand any inventory field group to see more fields.[^10]
-:::
-
 ## Add finding field groups
-<span id="field-groups">
 
 To group finding fields, first create a finding field group:
 
@@ -162,7 +168,11 @@ To group finding fields, first create a finding field group:
 
 2. Under Findings, select **Finding Fields**.
 
-{{< include /guide/model-inventory/_add-field-groups.qmd >}}
+3. Click **{{< fa plus >}} Add Group** and enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}** for the group.
+
+4. Click **Create Group** to add the new group.
+
+5. Assign the desired fields to the group.[^17]
 
 ## Delete finding fields
 
@@ -181,13 +191,29 @@ To group finding fields, first create a finding field group:
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^2]: [Finding field types](#field-types)
+[^2]: [Add finding field groups](#add-finding-field-groups)
 
-[^3]: [Manage finding types](manage-finding-types.qmd)
+[^3]:
 
-[^4]: [Add groups](#field-groups)
+    ::: {.callout title="Missing column headers?"}
+    Click, hold, and drag to the right to reveal additional columns.
+    :::
 
-[^5]:
+[^4]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+
+[^5]: [Finding field types](#finding-field-types)
+
+[^6]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+
+[^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^8]: [Finding field types](#finding-field-types)
+
+[^9]: [Manage finding types](manage-finding-types.qmd)
+
+[^10]: [Add finding field groups](#add-finding-field-groups)
+
+[^11]:
 
     ::: {.callout title="Leave this field blank to leave permissions as default."}
     - By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role has write access.
@@ -200,12 +226,14 @@ To group finding fields, first create a finding field group:
 
     :::
 
-[^6]: [Add finding field groups](#add-finding-field-groups)
+[^12]: [Add finding field groups](#add-finding-field-groups)
 
-[^7]: [Add finding field groups](#add-finding-field-groups)
+[^13]: [Manage supporting documentation](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation)
 
-[^8]: [Finding field types](#field-types)
+[^14]: [Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)
 
-[^9]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^15]: [Manage your profile](/guide/configuration/manage-your-profile.qmd#localization)
 
-[^10]: [Add finding field groups](#add-finding-field-groups)
+[^16]: [Manage users](/guide/configuration/manage-users.qmd)
+
+[^17]: [Add or edit finding fields](#add-or-edit-finding-fields)
