--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -4,8 +4,18 @@ sidebar: false
 bread-crumbs: false
 ---
 
-::: {.column-screen}
+```{=html}
+<style>
+    /* Hide the Quarto navbar search */
+#quarto-search .aa-DetachedSearchButton { display: none !important; }
 
+/* Hide the Quarto search modal */
+.aa-DetachedContainer { display: none !important; }
+.aa-DetachedOverlay { display: none !important; }
+</style>
+```
+
+::: {.column-screen}
 <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 
 <rapi-doc 
@@ -38,5 +48,4 @@ bread-crumbs: false
     allow-advanced-search="true"
     fill-request-fields-with-example="true">
 </rapi-doc>
-
 :::
