Setup: Add library blocks to YAML templates

--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -10,10 +10,7 @@ aliases:
   - /guide/templates/view-documentation-templates.html
 ---
 
-View and swap between different versions of your document templates within the {{< var validmind.platform >}}. Switch to a completely different template, or apply another version of your current template.
-
-- When swapping templates, only the document structure is changed. Any modifications that you might have made to content is preserved inside each content block or section.
-- If you are not sure which template or which version of a template your document is using, you can also check and compare between different templates and versions of templates.
+View and swap between different document templates or template versions, or duplicate and delete templates.
 
 ::: {.attn}
 
@@ -31,7 +28,13 @@ View and swap between different versions of your document templates within the {
 
 ## Swap document templates
 
-View templates applied to model documents or swap between templates or template versions:
+::: {.callout title="When swapping templates, only the document structure is changed."}
+
+- Any modifications that you might have made to content is preserved inside each content block or section.
+- If you are not sure which template or which version of a template your document is using, you can also check and compare between different templates and versions of templates.
+:::
+
+Switch a document to a completely different template, or apply another version of your current template:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -76,7 +79,11 @@ d. Click **Apply Changes to Template** to complete the swap.
 
 :::
 
-### Delete document templates
+## Duplicate document templates
+
+{{< include /guide/templates/_duplicate-template.qmd >}}
+
+## Delete document templates
 
 ::: {.callout-important title="Template deletion is permanent and cannot be undone."}
 
