--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -51,7 +51,7 @@ To add guidelines to your template, edit the YAML template directly.
 
 4. Click the template to edit and on the template details page, select **{{< fa pencil >}} Edit Raw**. 
 
-5. In the Edit Template YAML editor that opens, make your changes according to the template schema,[^5] including the addition of any shared text blocks from your library.*
+5. In the Edit Template YAML editor that opens, make your changes according to the template schema,[^5] including the addition of any shared text blocks from your library.[^6]
 
 6. Once you're finished editing, click **Continue** to view a side-by-side comparison of your changes with the previous version of the template.
 
@@ -167,7 +167,7 @@ a:hover {
 
 ### Add text blocks to templates
 
-To add shared text blocks* to your templates via the YAML editor:
+To add shared text blocks[^7] to your templates via the YAML editor:
 
 ::: {.panel-tabset}
 
@@ -185,9 +185,9 @@ e. To the right of the [key]{.smallcaps}, click **{{< fa copy >}}** to copy the 
 
 #### 2. Insert block keys into YAML templates
 
-a. With your shared text block's key copied to your clipboard, open up the editor for a YAML template.*
+a. With your shared text block's key copied to your clipboard, open up the editor for a YAML template.[^8]
 
-b. Under a section or subsection's `contents` block sequence,* insert a sequence item of `content_type: text` with your `block_key` nested under `options`.
+b. Under a section or subsection's `contents` block sequence,[^9] insert a sequence item of `content_type: text` with your `block_key` nested under `options`.
 
     For example:
 
@@ -234,4 +234,12 @@ Common issues with YAML include incorrect indenting, imbalanced quotes, or missi
 [^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
 [^5]: [Template schema](#template-schema)
+
+[^6]: [Add text blocks to templates](#add-text-blocks-to-templates)
+
+[^7]: [Manage text block library](manage-text-block-library.qmd)
+
+[^8]: [Edit YAML templates](#edit-yaml-templates)
+
+[^9]: [Template schema](#template-schema)
 
