--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -38,7 +38,8 @@ To transform an existing text block into a reusable block:
 
 5. Click **Add Block** to save your text block.
 
-After you've added a reusable text block, you can then insert it into your model documents.[^4]
+Once added, insert private or shared text blocks into your documents,[^4] or shared text blocks into document templates.[^5]
+
 
 ## Duplicate text blocks
 
@@ -94,6 +95,8 @@ To remove an existing text block from your block library:
 [^3]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
 [^4]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
+
+[^5]: [Customize document templates](/guide/templates/customize-document-templates.qmd#add-text-blocks-to-templates)
 
 
 
