docs: Add shared text blocks to YAML templates (#970)
* Setup: Add library blocks to YAML templates

* Save point

* Save point

* Tidying up

--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -10,10 +10,7 @@ aliases:
   - /guide/templates/view-documentation-templates.html
 ---
 
-View and swap between different versions of your document templates within the {{< var validmind.platform >}}. Switch to a completely different template, or apply another version of your current template.
-
-- When swapping templates, only the document structure is changed. Any modifications that you might have made to content is preserved inside each content block or section.
-- If you are not sure which template or which version of a template your document is using, you can also check and compare between different templates and versions of templates.
+View and swap between different document templates or template versions, or duplicate and delete templates.
 
 ::: {.attn}
 
@@ -31,7 +28,13 @@ View and swap between different versions of your document templates within the {
 
 ## Swap document templates
 
-View templates applied to model documents or swap between templates or template versions:
+::: {.callout title="When swapping templates, only the document structure is changed."}
+
+- Any modifications that you might have made to content is preserved inside each content block or section.
+- If you are not sure which template or which version of a template your document is using, you can also check and compare between different templates and versions of templates.
+:::
+
+Switch a document to a completely different template, or apply another version of your current template:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -44,10 +47,12 @@ View templates applied to model documents or swap between templates or template 
    - Click **{{< fa magnifying-glass >}} Search** to search for documents by keywords in the document title.
    - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list using different criteria in ascending or descending order.[^4]
 
-   ::: {.callout title="Note that searching and sorting of fields stack."}
+   <!-- ::: {.column-margin}
+   **Note that searching and sorting of fields stack.**
+
    For example, if you first search by keyword for `ValidMind` without clearing that search, any additional sorting applied will only apply to the results returned by that initial search.
 
-   :::
+   ::: -->
 
 5. On your document's detail page, locate [document template]{.smallcaps}.
 
@@ -76,7 +81,11 @@ d. Click **Apply Changes to Template** to complete the swap.
 
 :::
 
-### Delete document templates
+## Duplicate document templates
+
+{{< include /guide/templates/_duplicate-template.qmd >}}
+
+## Delete document templates
 
 ::: {.callout-important title="Template deletion is permanent and cannot be undone."}
 
@@ -120,6 +129,10 @@ Delete templates no longer required by your organization:
    - **[type]{.smallcaps}** — Sort by document type alphabetically.
    - **[date created]{.smallcaps}** — Sort by creation date.
    - **[date updated]{.smallcaps}** — Sort by last update date.
+
+      **Searching and sorting of fields stack.**<br>
+
+      For example, if you first search by keyword for `ValidMind` without clearing that search, any additional sorting applied will only apply to the results returned by that initial search.
 
 [^5]: [Customize document templates](customize-document-templates.qmd#edit-template-outlines)
 
