Draft: Questions from PDF uploads

--- a/site/guide/templates/customize-virtual-document-validator.qmd
+++ b/site/guide/templates/customize-virtual-document-validator.qmd
@@ -93,7 +93,7 @@ To manage an assessment:
 
 ::: {.panel-tabset}
 
-#### Add asssessments
+#### Add assessments
 
 a. Click **{{< fa plus >}} Add** to create a new assessmemt.
 
@@ -136,7 +136,11 @@ d. Once cloned, add or edit the assessment questions.[^5]
 
 ::: {.panel-tabset}
 
-#### Add asssessment questions
+### Add assessment questions
+
+Manually add assessment questions, or generate questions from a PDF upload:
+
+#### Manually add questions
 
 a. Click **{{< fa plus >}} Add Question(s)** to create a new question.
 
@@ -150,7 +154,21 @@ b. Enter in the **[questions]{.smallcaps}**:
 
 c. Click **Add # Question(s)** to insert questions into the assessment.
 
-#### Edit assessment questions
+#### Generate questions from PDF uploads
+
+::: {.callout-important}
+Uploading a PDF document will replace all previously existing questions, including any custom questions inserted manually.
+:::
+
+a. Click **{{< fa plus >}} Add Document** to upload a PDF, or **{{< fa plus >}} Change Document** to replace an existing PDF.
+
+b. On the Upload Document modal, drag and drop a PDF into the upload box, or click on the upload box to select a file.
+
+c. Click **Upload Document** to automatically generate questions based on your PDF upload.
+
+d. After questions are generated, review and edit them to ensure that they adhere to your upload's requirements.
+
+### Edit assessment questions
 
 ::: {.callout title="How do I locate a specific question?"}
 Click **{{<fa magnifying-glass >}} Search** to enter in your keywords, then press **Search** to narrow down results.
