Training: Setup for regulations & policies

--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -30,7 +30,7 @@ skip_preview: true
 
 # Learning objectives {.center}
 
-_"As an **administrator** who has set up user access to the {{< var validmind.platform >}} and prepared our model inventory for tracking models, I want to maximize the potential of {{< var vm.product >}} as a centralized hub for risk management oversight by configuring workflows and attestations in accordance with our organization's requirements."_
+_"As an **administrator** who has set up user access to the {{< var validmind.platform >}} and prepared our model inventory for tracking models, I want to maximize the potential of {{< var vm.product >}} as a centralized hub for risk management oversight by configuring workflows, regulations and policies, and attestations in accordance with our organization's requirements."_
 
 ::: {.tc}
 <br>
@@ -44,8 +44,8 @@ This third module is part of a four-part series:
 
 ::: {.f2}
 1. [{{< var vm.product >}} for model risk management](#validmind-for-model-risk-management)
-2. [Set up custom workflows](#set-up-workflows)
-3. [Manage model workflows](#manage-model-workflows)
+2. [Set up & manage custom workflows](#set-up-manage-workflows)
+3. [Customize regulations & policies](#customize-regulations-policies)
 4. [Configure attestations](#configure-attestations)
 
 :::
@@ -115,7 +115,7 @@ Let's continue our journey by learning how to **set up workflows** for your use 
 
 ::::
 
-# Set up workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Set up & manage workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
@@ -295,8 +295,6 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Manage model workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
-
 ## {.scrollable .center}
 
 :::: {.columns}
@@ -394,6 +392,8 @@ As an administrator, you may need to reset or abort model workflows as required:
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
+
+# Customize regulations & policies {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 # Configure attestations {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
