--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -29,14 +29,14 @@ listing:
     - path: using-validmind-for-model-risk-management.html
       title: "Using {{< var vm.product >}} for Model Risk Management"
       subtitle: "Module 3"
-      description: "{{< fa check >}} Set up custom workflows <br> {{< fa check >}} Manage workflows on models <br> {{< fa check >}} Set up attestations"
-      reading-time: "40"
+      description: "{{< fa check >}} Set up and mange custom workflows <br> {{< fa check >}} Customize regulations and policies <br> {{< fa check >}} Set up attestations"
+      reading-time: "60"
       author: "{{< var vm.product >}}"
     - path: organizational-oversight-reporting.html
       title: "Organizational Oversight & Reporting"
       subtitle: "Module 4"
       description: "{{< fa check >}} Audit model activity <br> {{< fa check >}} Audit model workflows <br> {{< fa check >}} View and customize analytics"
-      reading-time: "15"
+      reading-time: "25"
       author: "{{< var vm.product >}}"
     fields: [title, subtitle, description, reading-time]
 ---
@@ -57,7 +57,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 ::: {.w-50-ns .pr3}
 #### Total duration
 
-90 minutes
+120 minutes
 
 :::
 
