--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -45,7 +45,7 @@ This third module is part of a four-part series:
 ::: {.f2}
 1. [{{< var vm.product >}} for model risk management](#validmind-for-model-risk-management)
 2. [Set up & manage custom workflows](#set-up-manage-workflows)
-3. [Customize regulations & policies](#customize-regulations-policies)
+3. [Manage regulations & policies](#manage-regulations-policies)
 4. [Configure attestations](#configure-attestations)
 
 :::
@@ -393,7 +393,62 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Customize regulations & policies {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Manage regulations & policies {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+{{< include /training/common-slides/_document-checker.qmd >}}
+
+<br>
+Learn how to **customize the regulations and policies available to the {{< var vm.checker >}}** on the next page. {{< fa hand-point-right >}}
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Add regulations & policies
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-workflows/manage-model-stages.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/model-workflows/_configure-model-stages.qmd >}}
+
+#### Add model stages*
+
+{{< include /guide/model-workflows/_add-model-stages.qmd >}}
+
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/statuses" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .half .auto-collapse-10}
+::: {.tc}
+**Add a model stage**
+:::
+
+1. Click **{{< fa plus >}} Add Model Stage**.
+2. On the Add New Model Stage modal that appears:
+    a. Provide a stage **[name]{.smallcaps}**
+    b. Provide a stage **[description]{.smallcaps}**
+    c. Assign a **[color]{.smallcaps}** to the stage
+3. When you are done, click **Save** to apply your changes.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 
 # Configure attestations {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
