--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -28,12 +28,7 @@ Use the {{< var validmind.checker >}} to analyze your completed model documentat
 :::
 
 ::: {.w-75-ns}
-The {{< var validmind.checker >}} is a compliance tool that reviews technical documentation against a selected regulatory standard. Use the {{< var vm.checker >}} to identify gaps, generate actionable recommendations, and focus your efforts on areas that require attention. The {{< var vm.checker >}} uses a structured checklist to:
-
-- Assess whether required information is clearly documented
-- Identify missing or weak areas in the documentation
-- Offer guidance on how to improve clarity, completeness, and compliance
-- Ensure consistency with regulatory expectations for risk and model governance
+{{< include /guide/model-documentation/_document-checker.qmd >}}
 :::
 
 ::::
