--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -181,7 +181,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 ::: {.w-50-ns}
 #### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Model Risk Management
 - Set up and manage custom workflows
-- Customize regulations and policies
+- Manage regulations and policies
 - Set up attestations
 
 :::
