--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -398,12 +398,12 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 {{< include /training/common-slides/_document-checker.qmd >}}
 
 <br>
-Learn how to **customize the regulations and policies available to the {{< var vm.checker >}}** on the next page. {{< fa hand-point-right >}}
+Learn how to **customize the regulations and policies available to the {{< var vm.checker >}}** on the next pages. {{< fa hand-point-right >}}
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
-::: {.column width="30%" .pr4 .f2}
+::: {.column width="45%" .pr4 .f2}
 Add regulations & policies
 
 ::: {.f5 .nt2 .pl2 .mb4}
@@ -411,25 +411,56 @@ Add regulations & policies
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-workflows/manage-model-stages.qmd){.button target="_blank"}
+[Learn more ...](/guide/templates/customize-virtual-document-validator.qmd){.button target="_blank"}
 :::
 
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
-
 :::
 
-::: {.column width="70%" .bl .pl4 .f3}
+::: {.column width="55%" .bl .pl4 .f3}
 
-{{< include /guide/model-workflows/_configure-model-stages.qmd >}}
+::: {.f2}
+Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
 
-#### Add model stages*
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-{{< include /guide/model-workflows/_add-model-stages.qmd >}}
+2. Under Workspace, select **Regulations & Policies**.
 
+3. Add regulations or policies, associated assessments, and assessment questions.
 
 :::
 
 ::::
+
+::: {.f4}
+
+<br>
+
+::: {.panel-tabset}
+
+### i. Add regulations or policies
+
+{{< include /guide/templates/_regulations-policies.qmd >}}
+
+{{< include /guide/templates/_add-regulations-policies.qmd >}}
+
+### ii. Add assessments
+
+{{< include /guide/templates/_assessments.qmd >}}
+
+Select the regulation or policy you want to add an assessment for by clicking on it:
+
+{{< include /guide/templates/_add-assessments.qmd >}}
+
+### iii. Add questions
+
+Select the assessment you want to modify by clicking on it.
+
+{{< include /guide/templates/_add-assessment-questions.qmd >}}
+
+:::
+
+:::
 
 ## {background-iframe="https://app.prod.validmind.ai/settings/statuses" background-interactive="true" data-preload="yes"}
 
