Draft: Administrator Fundamentals update

--- a/site/guide/templates/_add-assessments.qmd
+++ b/site/guide/templates/_add-assessments.qmd
@@ -15,15 +15,13 @@ a. Once created, add or edit the assessment questions.^[[Add or edit assessment 
 
 
 :::: {.content-hidden unless-format="revealjs"}
-a. Click **{{< fa plus >}} Add** to create a new assessment.
+4. Click **{{< fa plus >}} Add** to create a new assessment.
 
-a.  Provide the details for your assessment:
+5.  Provide the details for your assessment:
 
     - **[assessment name]{.smallcaps}**
     - (Optional) **[description]{.smallcaps}**
 
-a. Click **Add** to create your assessment.
-
-a. Once created, add assessment questions.
+6. Click **Add** to create your assessment.
 
 ::::
