--- a/site/guide/templates/_add-regulations-policies.qmd
+++ b/site/guide/templates/_add-regulations-policies.qmd
@@ -14,15 +14,13 @@ a. Once created, manage your regulation or policy assessments.^[[Manage assessme
 
 
 :::: {.content-hidden unless-format="revealjs"}
-a. Click **{{< fa plus >}} Add** to create a new regulation or policy.
+3. Click **{{< fa plus >}} Add** to create a new regulation or policy.
 
-a.  Provide the details for your regulation or policy:
+4.  Provide the details for your regulation or policy:
 
     - **[regulation or policy name]{.smallcaps}**
     - (Optional) **[description]{.smallcaps}**
 
-a. Click **Add** to create your regulation or policy.
-
-a. Once created, add your regulation or policy assessments.
+5. Click **Add** to create your regulation or policy.
 
 ::::
