--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -400,10 +400,10 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 <br>
 Learn how to **customize the regulations and policies available to the {{< var vm.checker >}}** on the next pages. {{< fa hand-point-right >}}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
-::: {.column width="45%" .pr4 .f2}
+::: {.column width="30%" .pr4 .f2}
 Add regulations & policies
 
 ::: {.f5 .nt2 .pl2 .mb4}
@@ -411,70 +411,117 @@ Add regulations & policies
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/templates/customize-virtual-document-validator.qmd){.button target="_blank"}
+[Learn more ...](/guide/templates/customize-virtual-document-validator.qmd#manage-regulations-and-policies){.button target="_blank"}
 :::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
 
 :::
 
-::: {.column width="55%" .bl .pl4 .f3}
+::: {.column width="70%" .bl .pl4 .f3}
 
-::: {.f2}
-Try it **live** on the next page. {{< fa hand-point-right >}}
-:::
+{{< include /guide/templates/_regulations-policies.qmd >}}
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Under Workspace, select **Regulations & Policies**.
 
-3. Add regulations or policies, associated assessments, and assessment questions.
+{{< include /guide/templates/_add-regulations-policies.qmd >}}
 
 :::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/regulations" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add a regulation or policy**
+:::
+
+1. Click **{{< fa plus >}} Add** to create a new regulation or policy.
+2.  Provide a **[regulation or policy name]{.smallcaps}** and an optional **[description]{.smallcaps}**.
+3. Click **Add** to create your regulation or policy.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-::: {.f4}
+## {.scrollable .center}
 
-<br>
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Add assessments
 
-::: {.panel-tabset}
+::: {.tc}
+[Learn more ...](/guide/templates/customize-virtual-document-validator.qmd#add-or-clone-assessments){.button target="_blank"}
+:::
 
-### i. Add regulations or policies
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
 
-{{< include /guide/templates/_regulations-policies.qmd >}}
+:::
 
-{{< include /guide/templates/_add-regulations-policies.qmd >}}
-
-### ii. Add assessments
+::: {.column width="70%" .bl .pl4 .f3}
 
 {{< include /guide/templates/_assessments.qmd >}}
 
-Select the regulation or policy you want to add an assessment for by clicking on it:
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workspace, select **Regulations & Policies**.
+
+3. Select the regulation or policy you want to add an assessment for by clicking on it.
 
 {{< include /guide/templates/_add-assessments.qmd >}}
 
-### iii. Add questions
+:::
+::::
 
-Select the assessment you want to modify by clicking on it.
+## {background-iframe="https://app.prod.validmind.ai/settings/regulations" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add an assessment**
+:::
+
+1. Select the regulation or policy you added in the previous step by clicking on it.
+2. Click **{{< fa plus >}} Add** to create a new assessment.
+3.  Provide an **[assessment name]{.smallcaps}** and an optional **[description]{.smallcaps}**.
+6. Click **Add** to create your assessment.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Add assessment questions
+
+::: {.tc}
+[Learn more ...](/guide/templates/customize-virtual-document-validator.qmd#add-or-edit-assessment-questions){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
 
 {{< include /guide/templates/_add-assessment-questions.qmd >}}
-
 :::
+::::
 
-:::
+## {background-iframe="https://app.prod.validmind.ai/settings/regulations" background-interactive="true" data-preload="yes"}
 
-## {background-iframe="https://app.prod.validmind.ai/settings/statuses" background-interactive="true" data-preload="yes"}
-
-:::: {.slideover--b .half .auto-collapse-10}
+:::: {.slideover--b .three-quarters .auto-collapse-10}
 ::: {.tc}
-**Add a model stage**
+**Add an assessment question**
 :::
 
-1. Click **{{< fa plus >}} Add Model Stage**.
-2. On the Add New Model Stage modal that appears:
-    a. Provide a stage **[name]{.smallcaps}**
-    b. Provide a stage **[description]{.smallcaps}**
-    c. Assign a **[color]{.smallcaps}** to the stage
-3. When you are done, click **Save** to apply your changes.
+1. Select the assessment you want to add questions to by clicking on it.
+2. Click **{{< fa plus >}} Add Question(s)** to create a new question.
+3. Enter in the **[questions]{.smallcaps}**.
+4. Click **Add # Question(s)** to insert questions into the assessment.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
