--- a/site/guide/templates/_add-assessment-questions.qmd
+++ b/site/guide/templates/_add-assessment-questions.qmd
@@ -34,13 +34,13 @@ a. After questions are generated, review and edit them to ensure that they adher
 
 
 
-
 :::: {.content-hidden unless-format="revealjs"}
-#### Manually add questions
 
-a. Click **{{< fa plus >}} Add Question(s)** to create a new question.
+1. Select the assessment you want to add questions to by clicking on it.
 
-a. Enter in the **[questions]{.smallcaps}**:
+1. Click **{{< fa plus >}} Add Question(s)** to create a new question.
+
+1. Enter in the **[questions]{.smallcaps}**:
 
     - Each line without a break (enter) is considered one complete question. Empty lines will be ignored.
     - To add a separate question, press enter to start a new line.
@@ -48,16 +48,6 @@ a. Enter in the **[questions]{.smallcaps}**:
 
     As you enter questions, the count of questions will update.
 
-a. Click **Add # Question(s)** to insert questions into the assessment.
-
-#### Generate questions from PDF uploads
-
-a. Click **{{< fa plus >}} Add Document** to upload a PDF, or **{{< fa plus >}} Change Document** to replace an existing PDF.
-
-a. On the Upload Document modal, drag and drop a PDF into the upload box, or click on the upload box to select a file.
-
-a. Click **Upload Document** to automatically generate questions based on your PDF upload.
-
-a. After questions are generated, review and edit them to ensure that they adhere to your upload's requirements.
+1. Click **Add # Question(s)** to insert questions into the assessment.
 
 ::::
